fix: send button visibility on Vercel

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ body {
 
 .svg-button-text {
   position: absolute;
-  top: 20px;
+  top: 120px;
   left: 33px;
   font-size: 40px;
   font-weight: 700;
